Changes with APR 0.9.4

  *) Don't add the math library (-lm) if the modf() function
     is already available via libc.  [Roy Fielding]

  *) Solaris cc: Don't use the -mt option for threaded builds.  That
     is for non-Posix threading, and the use of it prevented us from
     linking with -lpthread, which in turn caused weird problems for
     APR applications.  [Kristofer Spinka <kspinka@style.net>]

Changes with APR 0.9.3

  *) Don't enable posixsem, at build time, on systems where sem_t *
     won't "fit" into an int (sizeof-wise). Also, better error handling
     when we fail to create a posixsem. PR 17186 [Scott Herod
     <sherod@pillardata.com>, Jim Jagielski]

  *) Default hpux 10.x to disable threading, since if it exists at all
     the pthread implementation should not be trusted, while hpux 10 
     had its own threads implementation that is no longer supported.
     PR 9457 [William Rowe]

  *) Fix error in apr-config when symlinks are involved.
     [Garrett Rooney <rooneg@electricjellyfish.net>]

Changes with APR 0.9.2

  *) Numerous bug fixes for file and socket inheritence by child
     processes on Unix, correcting bugs that affected the correct 
     behavior of apr_[file|socket]_inherit_[un]set() API.
     [Bjoern A. Zeeb <bz@zabbadoz.net>, William Rowe, Joe Orton]

  *) Define APR_UINT64_T_FMT and APR_UINT64_T_FMT_LEN.
     Define APR_INT64_T_FMT_LEN on Windows and Netware.  [Branko Cibej]

  *) Correct apr_file_gets() on OS2 and Win32 so that '\r's are no longer
     eaten, and apr_file_gets() -> apr_file_puts() moves the contents
     uncorrupted.  [William Rowe]

  *) Alter Win32's handling of the apr_proc_t hproc member, so that we
     close that system handle wherever an apr function would invoke the
     final waitpid() against a zombie process on Unix.  [William Rowe]

  *) APR_MAX_SECONDS_TO_LINGER and APR_FNM_* #defines replace their
     old undecorated names (missing APR_ prefix).  The old names will